[gd_scene load_steps=3 format=3 uid="uid://bi8xxs1hnl7wg"]

[ext_resource type="Script" path="res://file/config/config___parse.gd" id="1_bd4fm"]
[ext_resource type="PackedScene" uid="uid://bfk66wmj0dap3" path="res://addons/godot_play_tool/helper/helper_code.tscn" id="2_g6sw7"]

[node name="config_parse" type="Node2D"]
script = ExtResource("1_bd4fm")

[node name="Label4Encode" type="Label" parent="."]
offset_left = 921.0
offset_top = 179.0
offset_right = 961.0
offset_bottom = 202.0
theme_override_colors/font_color = Color(0, 1, 0, 1)

[node name="Label4Source" type="Label" parent="."]
offset_left = 553.0
offset_top = 179.0
offset_right = 593.0
offset_bottom = 202.0

[node name="helper_code" parent="." instance=ExtResource("2_g6sw7")]
offset_top = 179.0
offset_bottom = 596.0
